--- a/main.css
+++ b/main.css
@@ -46,6 +46,15 @@
                         margin-bottom: 20%;
                     }
                     
+                    @media screen and (max-width: 479px) {
+                        .h1text {
+                            width: 80%;
+                            padding-top: 15%;
+                            margin: auto;
+                            margin-bottom: 60%;
+                        }
+                    }
+                    
                     .heading-1.hero {
                         max-width: 100%;
                         margin-top: 0px;
@@ -69,6 +78,14 @@
                     @media screen and (max-width: 767px) {
                         .heading-1.hero {
                             font-size: 48px;
+                        }
+                    }
+                    
+                    @media screen and (max-width: 479px) {
+                        .heading-1.hero {
+                            padding-top: 75%;
+                            font-size: 32px;
+                            line-height: 1.3;
                         }
                     }
                     
@@ -109,6 +126,7 @@
                     }
                     
                     .text {
+                        width: 80px;
                         color: black;
                     }
                     
@@ -239,11 +257,9 @@
                         width: 100%;
                     }
                     
-                    @media only screen and (max-width: 800px) {
-                        .pcnav {
-                            padding-left: 1rem;
-                            width: 100%;
-                        }
+                    .mbnav {
+                        padding-left: 1rem;
+                        width: 100%;
                     }
                     
                     .logopc {
@@ -266,7 +282,7 @@
                         font-size: 0.5cm;
                         float: left;
                         text-align: center;
-                        padding: 12px 64px;
+                        padding: 12px 0px;
                         -webkit-transition: opacity 200ms ease;
                         transition: opacity 200ms ease;
                         /* width: 250px; */
@@ -357,11 +373,10 @@
                     .contact {
                         background-color: rgba(255, 255, 255, 0.1);
                         color: rgb(255, 255, 255);
-                        width: 15%;
                         margin-top: 1.5rem;
                         font-size: 0.5cm;
                         float: left;
-                        margin-left: 85px;
+                        margin-left: 155px;
                         padding: 12px 45px;
                         -webkit-transition: opacity 200ms ease;
                         transition: opacity 200ms ease;
