--- a/main.css
+++ b/main.css
@@ -176,6 +176,7 @@
                     }
                     
                     .mail {
+                        margin-bottom: 55%;
                         color: rgb(255, 255, 255);
                         text-align: center;
                     }
