--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+                    body {
+                        font-family: 'Josefin Sans', sans-serif;
+                    }
+                    
                     .green {
                         background-color: #07332f;
                     }
@@ -44,6 +48,12 @@
                         padding-top: 15%;
                         margin: auto;
                         margin-bottom: 20%;
+                        font-family: 'Josefin Sans', sans-serif;
+                    }
+                    
+                    h1 {
+                        font-family: 'Josefin Sans', sans-serif;
+                        font-weight: 900;
                     }
                     
                     @media screen and (max-width: 479px) {
@@ -52,6 +62,7 @@
                             padding-top: 15%;
                             margin: auto;
                             margin-bottom: 60%;
+                            font-family: 'Josefin Sans', sans-serif;
                         }
                     }
                     
