--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
                     body {
-                        font-family: 'Josefin Sans', sans-serif;
+                        font-family: 'Questrial', sans-serif;
                     }
                     
                     .green {
@@ -19,8 +19,12 @@
                         background-color: #07332f !important;
                     }
                     
+                    .howwidth {
+                        width: 37%;
+                    }
+                    
                     .text-block {
-                        padding: 12px 64px;
+                        padding: 12px 20px;
                         background-color: #fff;
                         -webkit-transition: opacity 200ms ease;
                         transition: opacity 200ms ease;
@@ -29,9 +33,10 @@
                         letter-spacing: 1px;
                         text-decoration: none;
                         text-transform: uppercase;
-                        width: 250px;
+                        width: 200px;
                         margin: auto;
                         text-align: center;
+                        margin-top: 60px;
                     }
                     
                     .text-block:hover {
@@ -45,15 +50,20 @@
                     
                     .h1text {
                         width: 80%;
-                        padding-top: 15%;
+                        padding-top: 10%;
                         margin: auto;
                         margin-bottom: 20%;
-                        font-family: 'Josefin Sans', sans-serif;
+                        font-family: 'Raleway', sans-serif;
                     }
                     
                     h1 {
-                        font-family: 'Josefin Sans', sans-serif;
+                        font-family: 'Raleway', sans-serif;
                         font-weight: 900;
+                    }
+                    
+                    h4 {
+                        font-family: 'Raleway', sans-serif;
+                        font-weight: 550;
                     }
                     
                     @media screen and (max-width: 479px) {
@@ -62,7 +72,7 @@
                             padding-top: 15%;
                             margin: auto;
                             margin-bottom: 60%;
-                            font-family: 'Josefin Sans', sans-serif;
+                            font-family: 'Raleway', sans-serif;
                         }
                     }
                     
@@ -70,7 +80,7 @@
                         max-width: 100%;
                         margin-top: 0px;
                         margin-bottom: 24px;
-                        font-family: Ogg, sans-serif;
+                        font-family: 'Raleway', sans-serif;
                         color: #9eadac;
                         font-size: 84px;
                         line-height: 1.2;
@@ -132,6 +142,7 @@
                     }
                     
                     .selectedtext {
+                        font-size: 1.5cm;
                         margin-top: 30%;
                         color: #07332f;
                     }
@@ -161,6 +172,11 @@
                     .hwwheader {
                         margin-top: 5rem;
                         margin-bottom: -5%;
+                    }
+                    
+                    .hwwheadertext {
+                        width: 37%;
+                        color: #07332f;
                     }
                     
                     .hwwtext {
@@ -213,6 +229,9 @@
                     }
                     
                     .table {
+                        height: 5rem;
+                        padding: 15px 64px;
+                        border-top: 1px solid rgba(255, 255, 255, 0.05);
                         margin-bottom: 0rem;
                     }
                     
@@ -279,6 +298,12 @@
                         }
                     }
                     
+                    .navbar {
+                        height: 75px;
+                        background-color: #07332f;
+                        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+                    }
+                    
                     .pcnav {
                         padding-left: 15rem;
                         width: 100%;
@@ -291,7 +316,7 @@
                     
                     .logopc {
                         color: rgb(255, 255, 255);
-                        margin-top: 1.5rem;
+                        margin-top: 0.5rem;
                         font-size: 0.5cm;
                         float: left;
                         text-align: center;
@@ -305,7 +330,7 @@
                     
                     .logo {
                         color: rgb(255, 255, 255);
-                        margin-top: 1.5rem;
+                        margin-top: 0.5rem;
                         font-size: 0.5cm;
                         float: left;
                         text-align: center;
@@ -320,7 +345,7 @@
                     .services {
                         color: rgb(255, 255, 255);
                         margin-left: 20rem;
-                        margin-top: 1.5rem;
+                        margin-top: 0.5rem;
                         font-size: 0.5cm;
                         /* width: 15%; */
                         float: left;
@@ -336,7 +361,7 @@
                     .ourwork {
                         color: rgb(255, 255, 255);
                         /* width: 15%; */
-                        margin-top: 1.5rem;
+                        margin-top: 0.5rem;
                         font-size: 0.5cm;
                         float: left;
                         text-align: center;
@@ -351,7 +376,7 @@
                     .aboutnav {
                         color: rgb(255, 255, 255);
                         /* width: 15%; */
-                        margin-top: 1.5rem;
+                        margin-top: 0.5rem;
                         font-size: 0.5cm;
                         float: left;
                         text-align: center;
@@ -366,7 +391,7 @@
                     .PROCESS {
                         color: rgb(255, 255, 255);
                         /* width: 15%; */
-                        margin-top: 1.5rem;
+                        margin-top: 0.5rem;
                         font-size: 0.5cm;
                         float: left;
                         text-align: center;
@@ -382,13 +407,14 @@
                         background-color: rgba(255, 255, 255, 0.1);
                         color: rgb(255, 255, 255);
                         /* width: 15%; */
-                        margin-top: 1.5rem;
+                        margin-top: 0.5rem;
                         font-size: 0.5cm;
                         float: left;
-                        padding: 12px 44px;
+                        padding: 10px 25px;
                         -webkit-transition: opacity 200ms ease;
                         transition: opacity 200ms ease;
-                        width: 150px;
+                        /* width: 150px; */
+                        margin-left: 1.5rem;
                         /* margin: auto; */
                         text-align: center;
                     }
@@ -400,7 +426,7 @@
                     .contact {
                         background-color: rgba(255, 255, 255, 0.1);
                         color: rgb(255, 255, 255);
-                        margin-top: 1.5rem;
+                        margin-top: 0.5rem;
                         font-size: 0.5cm;
                         float: left;
                         margin-left: 155px;
@@ -426,4 +452,73 @@
                     
                     a:visited {
                         color: white;
+                    }
+                    
+                    .footer {
+                        padding-top: 40px;
+                        padding-bottom: 40px;
+                        -webkit-box-align: start;
+                        -webkit-align-items: flex-start;
+                        -ms-flex-align: start;
+                        align-items: flex-start;
+                        border-top: 1px solid rgba(255, 255, 255, 0.05);
+                        background-color: #07332f;
+                        text-align: center;
+                    }
+                    
+                    .text-block-2 {
+                        padding-right: 32px;
+                        padding-left: 32px;
+                    }
+                    
+                    .text-block-2-copy {
+                        padding-right: 32px;
+                        padding-left: 32px;
+                    }
+                    
+                    .footer-wrapper {
+                        display: -webkit-box;
+                        display: -webkit-flex;
+                        display: -ms-flexbox;
+                        display: flex;
+                        -webkit-box-pack: center;
+                        -webkit-justify-content: center;
+                        -ms-flex-pack: center;
+                        justify-content: center;
+                        -webkit-box-align: center;
+                        -webkit-align-items: center;
+                        -ms-flex-align: center;
+                        align-items: center;
+                        color: #fff;
+                    }
+                    
+                    .copywrite {
+                        display: inline-block;
+                        -webkit-box-orient: vertical;
+                        -webkit-box-direction: normal;
+                        -webkit-flex-direction: column;
+                        -ms-flex-direction: column;
+                        flex-direction: column;
+                        font-size: 16px;
+                        line-height: 1;
+                    }
+                    
+                    .team-memeber-wrap {
+                        position: relative;
+                        display: -webkit-box;
+                        display: -webkit-flex;
+                        display: -ms-flexbox;
+                        display: flex;
+                        margin-top: -48px;
+                        margin-right: 24px;
+                        margin-left: 24px;
+                        padding: 16px 24px;
+                        -webkit-box-orient: vertical;
+                        -webkit-box-direction: normal;
+                        -webkit-flex-direction: column;
+                        -ms-flex-direction: column;
+                        flex-direction: column;
+                        background-color: #f7f7f7;
+                        -o-object-fit: fill;
+                        object-fit: fill;
                     }
