--- a/main.css
+++ b/main.css
@@ -2,6 +2,52 @@
                             font-family: 'Questrial', sans-serif;
                         }
                         
+                        h1,
+                        h2,
+                        h3,
+                        h4,
+                        h5,
+                        h6 {
+                            font-weight: bold;
+                            margin-bottom: 10px
+                        }
+                        
+                        h1 {
+                            font-size: 38px;
+                            line-height: 44px;
+                            margin-top: 20px
+                        }
+                        
+                        h2 {
+                            font-size: 32px;
+                            line-height: 36px;
+                            margin-top: 20px
+                        }
+                        
+                        h3 {
+                            font-size: 24px;
+                            line-height: 30px;
+                            margin-top: 20px
+                        }
+                        
+                        h4 {
+                            font-size: 18px;
+                            line-height: 24px;
+                            margin-top: 10px
+                        }
+                        
+                        h5 {
+                            font-size: 14px;
+                            line-height: 20px;
+                            margin-top: 10px
+                        }
+                        
+                        h6 {
+                            font-size: 12px;
+                            line-height: 18px;
+                            margin-top: 10px
+                        }
+                        
                         .green {
                             background-color: #07332f;
                         }
@@ -57,6 +103,11 @@
                         }
                         
                         h1 {
+                            font-family: 'Benne', serif;
+                            font-weight: 900;
+                        }
+                        
+                        .h1text>h1 {
                             font-family: 'Raleway', sans-serif;
                             font-weight: 900;
                         }
