--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@
                         }
                         
                         .howwidth {
-                            width: 37%;
+                            width: 50%;
                         }
                         
                         .text-block {
@@ -265,8 +265,15 @@
                         }
                         
                         .hwwheadertext {
-                            width: 37%;
+                            width: 50%;
                             color: rgba(7, 51, 47, 0.8);
+                        }
+                        
+                        @media (max-width: 992px) {
+                            .hwwheadertext {
+                                width: 100%;
+                                color: rgba(7, 51, 47, 0.8);
+                            }
                         }
                         
                         .hwwtext {
