--- a/main.css
+++ b/main.css
@@ -198,7 +198,7 @@
                         
                         .selected {
                             color: #07332f;
-                            margin-bottom: -5%;
+                            padding-bottom: -5%;
                         }
                         
                         .selectedtext {
